# BinaryWire

./: .gitignore  Cargo.toml  README.md  benchmark.rs  benchmark_results.csv  build.rs
benchmarks/: biwi.rs  json.rs  messages.proto  mod.rs  protobuf.rs  udp.rs
examples/: basic.rs  udp.rs
examples/express/: QUICKSTART.md  README.md  biwi-bridge.js  package-lock.json  package.json  server.js  test-client.js
src/: client.rs  decoder.rs  encoder.rs  lib.rs  main.rs  message.rs  network.rs  server.rs  types.rs
