[package]
name = "biwi"
version = "0.1.0"
edition = "2021"
authors = ["BiWi Contributors"]
description = "BiWi - Binary Wire Protocol: A streaming, binary-first alternative to JSON"
license = "CC-BY-NC-4.0"
repository = "https://github.com/yourusername/biwi"
keywords = ["binary", "protocol", "serialization", "streaming", "wire-format"]
categories = ["encoding", "network-programming"]

[[bin]]
name = "benchmark"
path = "benchmark.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
prost = "0.12"

[build-dependencies]
prost-build = "0.12"
